infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: freddies.dev
      http:
        paths:
          - path: /api/items/?(.*)
            backend:
              serviceName: fred-items-srv
              servicePort: 3000
